-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2026-02-02T21:31:30.821Z

CREATE TYPE "length_unit" AS ENUM (
  'CENTIMETER',
  'METER',
  'KILOMETER',
  'INCH',
  'FEET',
  'MILE'
);

CREATE TYPE "volume_unit" AS ENUM (
  'CUBIC_CENTIMETER',
  'CUBIC_METER',
  'LITER',
  'CUBIC_INCH',
  'CUBIC_FEET',
  'GALLON'
);

CREATE TYPE "weight_unit" AS ENUM (
  'GRAMS',
  'KILOGRAMS',
  'OUNCES',
  'POUNDS'
);

CREATE TYPE "time_unit" AS ENUM (
  'SECOND',
  'MINUTE',
  'HOUR'
);

CREATE TYPE "vehicle_consumption_unit" AS ENUM (
  'LITERS_PER_100KM',
  'KILOMETERS_PER_LITER',
  'MILES_PER_GALLON',
  'GALLONS_PER_MILE'
);

CREATE TYPE "vehicle_category_type" AS ENUM (
  'TRUCK',
  'VAN',
  'PICKUP',
  'MOTORCYCLE',
  'BICYCLE'
);

CREATE TYPE "vehicle_engine_type" AS ENUM (
  'GASOLINE',
  'DIESEL',
  'CNG',
  'ELECTRIC',
  'HYBRID',
  'MECHANIC'
);

CREATE TYPE "milestone_category" AS ENUM (
  'DEPOT',
  'DISTRIBUTION_CENTER',
  'LOADING_POINT',
  'WAREHOUSE',
  'TRANSFER_POINT'
);

CREATE TYPE "delivery_method" AS ENUM (
  'DELIVERY',
  'PICKUP',
  'SIGNATURE'
);

CREATE TYPE "packaging_type" AS ENUM (
  'BOX',
  'ENVELOPE',
  'BAG',
  'CARTON',
  'PALLET',
  'SHRINK_WRAP'
);

CREATE TYPE "special_handling" AS ENUM (
  'FRAGILE',
  'PERISHABLE',
  'HAZARDOUS',
  'REFRIGERATED'
);

CREATE TYPE "delivery_lot_state" AS ENUM (
  'UNPROCESSED',
  'PROCESSING',
  'OPTIMIZING',
  'PROCESSED',
  'CANCELED'
);

CREATE TABLE "tenant" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "alias" varchar(50) UNIQUE NOT NULL
);

CREATE TABLE "tenant_user" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "tenant_id" integer NOT NULL,
  "alias" varchar(50) NOT NULL
);

CREATE TABLE "company" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "tenant_id" integer NOT NULL,
  "alias" varchar(50) NOT NULL
);

CREATE TABLE "company_user" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" integer NOT NULL,
  "alias" varchar(50) NOT NULL
);

CREATE TABLE "vehicle" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" integer NOT NULL,
  "name" varchar(255) NOT NULL,
  "volume" integer,
  "volume_unit" volume_unit,
  "consumption" integer,
  "consumption_unit" vehicle_consumption_unit,
  "category_type" vehicle_category_type,
  "engine_type" vehicle_engine_type
);

CREATE TABLE "fleet" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" integer NOT NULL,
  "name" varchar(255) NOT NULL
);

CREATE TABLE "fleet_vehicle" (
  "fleet_id" integer,
  "vehicle_id" integer,
  "quantity" integer NOT NULL,
  PRIMARY KEY ("fleet_id", "vehicle_id")
);

CREATE TABLE "driver" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" integer NOT NULL,
  "first_name" varchar(50) NOT NULL,
  "last_name" varchar(50),
  "work_schedules" JSON,
  "start_point" varchar(25),
  "end_point" varchar(25),
  "work_areas" JSON
);

CREATE TABLE "driver_vehicle" (
  "driver_id" integer,
  "vehicle_id" integer,
  "quantity" integer NOT NULL,
  PRIMARY KEY ("driver_id", "vehicle_id")
);

CREATE TABLE "milestone" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" integer NOT NULL,
  "name" varchar(255) NOT NULL,
  "location" varchar(25) NOT NULL,
  "category" milestone_category
);

CREATE TABLE "delivery" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" integer NOT NULL,
  "method" delivery_method,
  "milestone_id" integer,
  "destination" varchar(25),
  "schedules" JSON,
  "width" integer,
  "height" integer,
  "depth" integer,
  "length_unit" length_unit,
  "volume" integer,
  "volume_unit" volume_unit,
  "weight" integer,
  "weight_unit" weight_unit,
  "packaging" packaging_type,
  "handling" JSON,
  "value_cents" integer,
  "value_currency" varchar(3),
  "extra" JSON
);

CREATE TABLE "delivery_lot" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" integer NOT NULL,
  "milestone_id" integer,
  "fleet_id" integer,
  "state" delivery_lot_state NOT NULL DEFAULT 'UNPROCESSED',
  "vehicle_volume_min" integer,
  "vehicle_volume_max" integer,
  "vehicle_capacity_min" integer,
  "vehicle_capacity_max" integer,
  "route_stops_min" integer,
  "route_stops_max" integer,
  "route_length_min" integer,
  "route_length_max" integer,
  "route_length_unit" length_unit,
  "route_time_min" integer,
  "route_time_max" integer,
  "route_time_unit" time_unit
);

CREATE TABLE "delivery_lot_delivery" (
  "delivery_lot_id" integer,
  "delivery_id" integer,
  PRIMARY KEY ("delivery_lot_id", "delivery_id")
);

CREATE TABLE "delivery_lot_driver" (
  "delivery_lot_id" integer,
  "driver_id" integer,
  PRIMARY KEY ("delivery_lot_id", "driver_id")
);

CREATE TABLE "delivery_plan" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "delivery_lot_id" integer NOT NULL,
  "optimizer_id" varchar(36)
);

CREATE TABLE "delivery_path" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "delivery_plan_id" integer NOT NULL,
  "milestone_id" integer NOT NULL,
  "vehicle_id" integer,
  "driver_id" integer
);

CREATE TABLE "delivery_path_delivery" (
  "delivery_path_id" integer,
  "delivery_id" integer,
  "delivery_order" integer NOT NULL,
  PRIMARY KEY ("delivery_path_id", "delivery_id")
);

CREATE UNIQUE INDEX ON "tenant_user" ("tenant_id", "alias");

CREATE UNIQUE INDEX ON "company" ("tenant_id", "alias");

CREATE UNIQUE INDEX ON "company_user" ("company_id", "alias");

CREATE UNIQUE INDEX ON "delivery_path_delivery" ("delivery_path_id", "delivery_order");

COMMENT ON COLUMN "driver"."work_schedules" IS 'List of RFC 5545';

COMMENT ON COLUMN "driver"."start_point" IS 'ISO 6709:DD (e.g. ''+DD.DDDDDDD+DDD.DDDDDDD/'')';

COMMENT ON COLUMN "driver"."end_point" IS 'ISO 6709:DD (e.g. ''+DD.DDDDDDD+DDD.DDDDDDD/'')';

COMMENT ON COLUMN "driver"."work_areas" IS 'List of lists of geographic working areas (ISO 6709:DD)';

COMMENT ON COLUMN "milestone"."location" IS 'ISO 6709:DD (e.g. ''+DD.DDDDDDD+DDD.DDDDDDD/'')';

COMMENT ON COLUMN "delivery"."destination" IS 'ISO 6709:DD (e.g. ''+DD.DDDDDDD+DDD.DDDDDDD/'')';

COMMENT ON COLUMN "delivery"."schedules" IS 'List of RFC 5545';

COMMENT ON COLUMN "delivery"."handling" IS 'List of special handling';

COMMENT ON COLUMN "delivery"."value_currency" IS 'ISO 4217 code';

COMMENT ON COLUMN "delivery_lot"."vehicle_volume_min" IS 'Minimum loading volume percentage';

COMMENT ON COLUMN "delivery_lot"."vehicle_volume_max" IS 'Maximum loading volume percentage';

COMMENT ON COLUMN "delivery_lot"."vehicle_capacity_min" IS 'Minimum packages capacity';

COMMENT ON COLUMN "delivery_lot"."vehicle_capacity_max" IS 'Maximum packages capacity';

COMMENT ON COLUMN "delivery_lot"."route_stops_min" IS 'Minimum required stops';

COMMENT ON COLUMN "delivery_lot"."route_stops_max" IS 'Maximum required stops';

COMMENT ON COLUMN "delivery_lot"."route_length_min" IS 'Minimum distance for a delivery route';

COMMENT ON COLUMN "delivery_lot"."route_length_max" IS 'Maximum distance for a delivery route';

COMMENT ON COLUMN "delivery_lot"."route_time_min" IS 'Minimum delivery route time';

COMMENT ON COLUMN "delivery_lot"."route_time_max" IS 'Maximum delivery route time';

COMMENT ON COLUMN "delivery_plan"."optimizer_id" IS 'UUID';

ALTER TABLE "tenant_user" ADD CONSTRAINT "fk__tenant_user__company" FOREIGN KEY ("tenant_id") REFERENCES "tenant" ("id") ON DELETE CASCADE;

ALTER TABLE "company" ADD CONSTRAINT "fk__company__tenant" FOREIGN KEY ("tenant_id") REFERENCES "tenant" ("id") ON DELETE CASCADE;

ALTER TABLE "company_user" ADD CONSTRAINT "fk__company_user__company" FOREIGN KEY ("company_id") REFERENCES "company" ("id") ON DELETE CASCADE;

ALTER TABLE "vehicle" ADD CONSTRAINT "fk__vehicle__company" FOREIGN KEY ("company_id") REFERENCES "company" ("id") ON DELETE CASCADE;

ALTER TABLE "fleet" ADD CONSTRAINT "fk__fleet__company" FOREIGN KEY ("company_id") REFERENCES "company" ("id") ON DELETE CASCADE;

ALTER TABLE "fleet_vehicle" ADD CONSTRAINT "fk__fleet_vehicle__fleet" FOREIGN KEY ("fleet_id") REFERENCES "fleet" ("id") ON DELETE CASCADE;

ALTER TABLE "fleet_vehicle" ADD CONSTRAINT "fk__fleet_vehicle__vehicle" FOREIGN KEY ("vehicle_id") REFERENCES "vehicle" ("id") ON DELETE CASCADE;

ALTER TABLE "driver" ADD CONSTRAINT "fk__driver__company" FOREIGN KEY ("company_id") REFERENCES "company" ("id") ON DELETE CASCADE;

ALTER TABLE "driver_vehicle" ADD CONSTRAINT "fk__driver_vehicle__driver" FOREIGN KEY ("driver_id") REFERENCES "driver" ("id") ON DELETE CASCADE;

ALTER TABLE "driver_vehicle" ADD CONSTRAINT "fk__driver_vehicle__vehicle" FOREIGN KEY ("vehicle_id") REFERENCES "vehicle" ("id") ON DELETE CASCADE;

ALTER TABLE "milestone" ADD CONSTRAINT "fk__milestone__company" FOREIGN KEY ("company_id") REFERENCES "company" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery" ADD CONSTRAINT "fk__delivery__company" FOREIGN KEY ("company_id") REFERENCES "company" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery" ADD CONSTRAINT "fk__delivery__milestone" FOREIGN KEY ("milestone_id") REFERENCES "milestone" ("id") ON DELETE SET NULL;

ALTER TABLE "delivery_lot" ADD CONSTRAINT "fk__delivery_lot__company" FOREIGN KEY ("company_id") REFERENCES "company" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_lot" ADD CONSTRAINT "fk__delivery_lot__milestone" FOREIGN KEY ("milestone_id") REFERENCES "milestone" ("id") ON DELETE SET NULL;

ALTER TABLE "delivery_lot" ADD CONSTRAINT "fk__delivery_lot__fleet" FOREIGN KEY ("fleet_id") REFERENCES "fleet" ("id") ON DELETE SET NULL;

ALTER TABLE "delivery_lot_delivery" ADD CONSTRAINT "fk__delivery_lot_delivery__delivery_lot" FOREIGN KEY ("delivery_lot_id") REFERENCES "delivery_lot" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_lot_delivery" ADD CONSTRAINT "fk__delivery_lot_delivery__delivery" FOREIGN KEY ("delivery_id") REFERENCES "delivery" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_lot_driver" ADD CONSTRAINT "fk__delivery_lot_driver__delivery_lot" FOREIGN KEY ("delivery_lot_id") REFERENCES "delivery_lot" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_lot_driver" ADD CONSTRAINT "fk__delivery_lot_driver__driver" FOREIGN KEY ("driver_id") REFERENCES "driver" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_plan" ADD CONSTRAINT "fk__delivery_plan__delivery_lot" FOREIGN KEY ("delivery_lot_id") REFERENCES "delivery_lot" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_path" ADD CONSTRAINT "fk__delivery_path__delivery_plan" FOREIGN KEY ("delivery_plan_id") REFERENCES "delivery_plan" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_path" ADD CONSTRAINT "fk__delivery_path__milestone" FOREIGN KEY ("milestone_id") REFERENCES "milestone" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_path" ADD CONSTRAINT "fk__delivery_path__vehicle" FOREIGN KEY ("vehicle_id") REFERENCES "vehicle" ("id") ON DELETE SET NULL;

ALTER TABLE "delivery_path" ADD CONSTRAINT "fk__delivery_path__driver" FOREIGN KEY ("driver_id") REFERENCES "driver" ("id") ON DELETE SET NULL;

ALTER TABLE "delivery_path_delivery" ADD CONSTRAINT "fk__delivery_path_delivery__delivery_path" FOREIGN KEY ("delivery_path_id") REFERENCES "delivery_path" ("id") ON DELETE CASCADE;

ALTER TABLE "delivery_path_delivery" ADD CONSTRAINT "fk__delivery_path_delivery__delivery" FOREIGN KEY ("delivery_id") REFERENCES "delivery" ("id") ON DELETE CASCADE;
